--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Dashboard Test - Angular</title>
-    <link rel="stylesheet" href="css/IoTFComponents.css">
+    <link rel="stylesheet" href="css/IoTFCommon.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/ol.css">
 
@@ -26,7 +26,8 @@
     <script src="vendor/mqttws31/index.js"></script>
     <script type='application/javascript' src='vendor/fastclick/fastclick.js'></script>
 
-    <script src="js/IoTFComponents.js"></script>
+    <script src="js/IoTFCommon.js"></script>
+    <script src="js/Modules.js"></script>
 
 
     <style>
