--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,13 @@
 <html>
   <head>
-
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Dashboard Test - Angular</title>
-    <link rel="stylesheet" href="css/IoTFCommon.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/ol.css">
-
-    <!-- vendor files for bundle -->
-    <script src="vendor/jquery/dist/jquery.min.js"></script>
-    <script src="vendor/jquery-autoellipsis/jquery.autoellipsis-1.0.10.min.js"></script>
-    <script src="vendor/jquery-ui/jquery-ui.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="vendor/d3/d3.min.js"></script>
-    <script src="vendor/c3/c3.min.js"></script>
-    <script src="vendor/react/react-with-addons.js"></script>
-    <script src="vendor/react/react-dom.min.js"></script>
-    <script src="vendor/react-grid-layout/react-grid-layout.js"></script>
-    <script src="vendor/react-grid-layout/utils.js"></script>
-    <script src="vendor/reflux/reflux.min.js"></script>
-    <script src="vendor/dygraphs/dygraph-combined.js"></script>
-    <script src="vendor/openlayers/ol.min.js"></script>
-    <script src="vendor/griddle-react/underscore-min.js"></script>
-    <script src="vendor/griddle-react/griddle.js"></script>
-    <script src="vendor/mqttws31/index.js"></script>
-    <script type='application/javascript' src='vendor/fastclick/fastclick.js'></script>
-
-    <script src="js/IoTFCommon.js"></script>
-    <script src="js/IoTFComponents.js"></script>
-    <script src="js/Modules.js"></script>
-
-
-    <style>
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Custom Card Server</title>
   </head>
   <body>
-  Hello world!
+    <h2>
+    Custom Card Server is up and running!
+    </h2>
+    <p>
+    <a href="config/DashboardConfig.json">Configuration file</a>
   </body>
 </html>
